<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LineChartDemo2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/motion_graph"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />


    //deepSleep
    <TextView
        android:id="@+id/DeepSleep"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/poppinsbold"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/REM" />

    //REM
    <TextView
        android:id="@+id/REM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/poppinsbold"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Home"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/teal_200"
        android:textColorHint="@color/teal_200"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLineChart1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/teal_200"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Home" />

    <Button
        android:id="@+id/btnLineChart2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/teal_200"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnLineChart1" />



</androidx.constraintlayout.widget.ConstraintLayout>